--- a/src/pages/service/DeepCleasing.module.css
+++ b/src/pages/service/DeepCleasing.module.css
@@ -40,3 +40,12 @@
 .id8 {
   grid-area: id8;
 }
+@media (max-width: 430px) {
+  .bannerWrapper {
+    height: auto;
+  }
+  .bannerMiddlePhoto img {
+    height: 275px;
+    width: 358px;
+  }
+}
