--- a/src/pages/service/DermaPlanning.module.css
+++ b/src/pages/service/DermaPlanning.module.css
@@ -7,7 +7,10 @@
   align-items: center;
   width: 100vw;
 }
-
+.titleDescription {
+  grid-column: 1 / 2;
+  margin: 225px 128px 0px 0px;
+}
 .bannerBottom {
   margin-top: 32px;
   background-color: #446953;
@@ -20,7 +23,6 @@
 }
 .id1 {
   grid-area: id1;
-  height: min-content;
 }
 
 .id2 {
@@ -46,10 +48,23 @@
 .id7 {
   grid-area: id7;
 }
-
 .id8 {
   grid-area: id8;
 }
 .id9 {
   grid-area: id9;
+}
+@media (max-width: 430px) {
+  .bannerWrapper {
+    height: auto;
+  }
+
+  .titleDescription {
+    grid-column: 1 / 2;
+    margin: 32px 0px 0px 0px;
+  }
+  .bannerMiddlePhoto img {
+    height: 275px;
+    width: 358px;
+  }
 }
