--- a/src/pages/service/GlowFacial.module.css
+++ b/src/pages/service/GlowFacial.module.css
@@ -56,3 +56,12 @@
 .id9 {
   grid-area: id9;
 }
+@media (max-width: 430px) {
+  .bannerWrapper {
+    height: auto;
+  }
+  .bannerMiddlePhoto img {
+    height: 275px;
+    width: 358px;
+  }
+}
