--- a/src/pages/service/ServiceIncluded.module.css
+++ b/src/pages/service/ServiceIncluded.module.css
@@ -32,12 +32,11 @@
 
   }
 
-  .serviceTitle {
-    padding: 10px;
-    padding-left: 101px;
-  }
 
-
+}
+.serviceTitle {
+  padding: 10px;
+  padding-left: 101px;
 }
 .serviceSteps {
     display: grid;
@@ -79,30 +78,17 @@
 }
 @media (max-width: 430px) {
 .serviceIncluded {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: initial;
-    padding: 0;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: initial;
+  padding: 0;
+}
 
-  .serviceIncludedContent {
-    max-width: 358px;
-    margin: 60px 16px 120px 16px;
+.serviceIncludedContent {
+  max-width: 358px;
+  margin: 60px 16px 120px 16px;
 
-    .service-title {
-      padding: 10px 0px 32px 0px;
-    }
-
-    .serviceSteps {
-      grid-template-columns: repeat(auto-fill, minmax(358px, 1fr));
-      column-gap: 30px;
-      padding: 0;
-
-      .detail-item {
-        width: 358px;
-      }
-    }
 
     .serviceIncludedWarning {
       margin: 40px 0px 0px 0px;
@@ -111,7 +97,10 @@
       align-items: center;
 
       div {
-        display: inline-block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
 
         .material-symbols-outlined {
           display: flex;
@@ -121,5 +110,20 @@
         }
       }
     }
-  }
+}
+.serviceSteps {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  width:358px;
+  padding: 0;
+
+    .detail-item {
+      width: 358px;
+    }
+}
+.serviceTitle {
+  margin-bottom: 32px;
+  padding-left: 0px;
+}
 }
